--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,8 +5,8 @@
     </a>
     <nav>
       <a href="/">Home</a>
-      <a href="#">Upcoming treks</a>
-      <a href="#">Trek for family</a>
-      <a href="/contact">Contact us</a>
+      <a href="/Matkaklubi/views/pages/treks.ejs">Upcoming treks</a>
+      <a href="/Matkaklubi/views/pages/news.ejs">News</a>
+      <a href="/Matkaklubi/views/pages/contact.ejs">Contact us</a>
     </nav>
   </div>
