--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -44,7 +44,7 @@
     </div>
   </div>
 
-  <%- include ("../partials/public/nav-all.ejs") %>
+  <%- include ("../partials/nav-all.ejs") %>
 
 </body>
 
