--- a/views/pages/treks.ejs
+++ b/views/pages/treks.ejs
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
-
+ 
 <head>
     <title>Matkaklubi - Matkad</title>
     <link rel="stylesheet" href="/stylesheets/treks.css">
     <%- include ("../partials/header.ejs") %>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
-
+ 
 <body>
-
+ 
     <div class="container-fluid pais-sektsioon">
-        <%- include ("../partials/nav.ejs") %>
-            <div class="matkad">
+        <%- include ("../partials/nav.ejs") %> 
+
+
+                  <div class="matkad">
                 <% for(let i=0; i < matkad.length; i++) { %>
                     <div class="matk">
                         <div class="matka-pealkiri">
@@ -24,11 +28,28 @@
                             <a href=<%=`https://www.google.com/maps/@${matkad[i].locationLatitude},${matkad[i].locationLongitude},19z`
                                 %>
                                 target="_blank"><%= matkad[i].locationDescription %></a>
+                
+                            <div class="matka-hind">
+                                    <%= matkad[i].price %>
+                                </div>
+                            <div class="matka-aeg">
+                                    <%= matkad[i].startsAt %> -
+                                    <%= matkad[i].endsAt %>
+                                </div>
+                            <div class="matka-pilt">
+                                <img a href="(%= matkad[i].imageUrl %>)" width="250" height="150">
+                                   
+                            </div>
+       
                         </div>
                     </div>
                     <% } %>
+             <%- include ("../partials/nav-all.ejs") %>
             </div>
-    </div>
+                </div>
+               
+          </div>
+    
 </body>
-
+ 
 </html>
