--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -14,7 +14,8 @@
         <h2>Climb for better</h2>
         <h1>Get out now</h1>
         <h4>Join us for the weekend to climb the highest peak in England</h4>
-        <button>View upcoming treks</button>
+        <a href="/treks">
+        <button>View upcoming treks</button></a>
         <div class="tydruk"></div>
       </div>
   </div>
