--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -9,7 +9,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  padding: 37px 72px 140px;
+  padding: 37px 72px 20px;
 }
 
 .pais-vasak {
@@ -31,8 +31,8 @@ body {
 .pais {
   display: flex;
   justify-content: space-between;
-  margin-left: 100px;
-  margin-right: 100px;
+  margin-left: auto;
+  margin-right: auto;
   width: 95%;
 
 }
@@ -83,7 +83,7 @@ body {
   line-height: 29.17px;
 }
 
-.sisu>button {
+button {
   margin-top: 30px;
   font-size: 12.5px;
   font-weight: 800;
@@ -224,25 +224,28 @@ body {
   margin-right: -50px;
 }
 
-.kontakti-sektsioon {
-  height: 100vh;
+h3{
+  text-align: center;
+  font-weight: bold;
+  color: black;
+}
+
+form {
   display: flex;
   flex-direction: column;
-  align-items: baseline;
-  margin-top: 80px;
+  font-family: 'Montserrat', sans-serif;
+  width: 40%;
+  margin:10px auto;
+  width: 400px;
+  padding: 20px 12px 10px 20px;
+  color: rgb(36, 31, 31);
+
 }
 
-.kontakti-sektsioon>input,
-.kontakti-sektsioon>textarea {
-  width: 300px;
-  margin-bottom: 15px;
+input{
+  color: rgb(36, 31, 31);
+  font-weight: bold;
 }
-
-.kontakti-sektsioon>textarea {
-  height: 150px;
-}
-
-.kontakti-sektsioon>button {}
 
 .helista {
   font-weight: 800;
@@ -287,7 +290,7 @@ body {
 .icons {
 display: inline-block;
 flex-direction: row;
-padding: 37px 72px 140px;
+padding: 37px 72px 20px;
 
 }
 
