--- a/public/stylesheets/treks.css
+++ b/public/stylesheets/treks.css
@@ -1,11 +1,14 @@
 .matk{
     font-family: 'Montserrat', sans-serif;
     font-size: 25px;
+    width: 33%;
+    column-gap: 20px;
+}
+
+.matkad{
     display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-content: center;
-    column-gap: 20px
+    margin-top: 100px;
+    margin-bottom: 150px;
 }
 
 .matka-pealkiri{
@@ -15,5 +18,17 @@
 .matka-hind{
     font-style: italic;
 
+}
+
+.matka-nupp {
+    margin-top: 20px;
+    font-size: 12.5px;
+    font-weight: 800;
+    text-transform: uppercase;
+    letter-spacing: 2.25px;
+    color: #FFFFFF;
+    background: #0B0B0B 0% 0% no-repeat padding-box;
+    padding: 24px 22.5px 21px;
+    border: 0;
 }
 
