--- a/views/pages/treks.ejs
+++ b/views/pages/treks.ejs
@@ -5,7 +5,6 @@
     <title>Matkaklubi - Matkad</title>
     <link rel="stylesheet" href="/stylesheets/treks.css">
     <%- include ("../partials/header.ejs") %>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 </head>
  
@@ -37,15 +36,18 @@
                                     <%= matkad[i].endsAt %>
                                 </div>
                             <div class="matka-pilt">
-                                <img a href="(%= matkad[i].imageUrl %>)" width="250" height="150">
-                                   
+                                <img src="<%= matkad[i].imageUrl %>" width="350" height="250">
+
+                   
                             </div>
+                            <a href=<%='trek/${matkad[i].id}', %> class="matka-nupp">Registreeru matkale</a>
        
                         </div>
                     </div>
                     <% } %>
-             <%- include ("../partials/nav-all.ejs") %>
+             
             </div>
+            <%- include ("../partials/nav-all.ejs") %>
                 </div>
                
           </div>
