--- a/views/pages/trek.ejs
+++ b/views/pages/trek.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <title>Matkaklubi - Matk</title>
-    <link rel="stylesheet" href="/Matkaklubi/public/stylesheets/trek.css">
+    <link rel="stylesheet" href="/stylesheets/trek.css">
     <%- include ("../partials/header.ejs") %>
 </head>
 
