--- a/public/stylesheets/treks.css
+++ b/public/stylesheets/treks.css
@@ -32,3 +32,34 @@
     border: 0;
 }
 
+.uudis{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 25px;
+    width: 33%;
+    column-gap: 20px;
+}
+
+.uudised{
+    display: flex;
+    margin-top: 100px;
+    margin-bottom: 150px;
+}
+
+.uudise-pealkiri{
+    font-weight: bold;
+}
+.uudise-autor {
+    font-style: italic;
+}
+.uudise-nupp {
+    margin-top: 20px;
+    font-size: 12.5px;
+    font-weight: 800;
+    text-transform: uppercase;
+    letter-spacing: 2.25px;
+    color: #FFFFFF;
+    background: #0B0B0B 0% 0% no-repeat padding-box;
+    padding: 24px 22.5px 21px;
+    border: 0;
+}
+
