--- a/views/pages/trek.ejs
+++ b/views/pages/trek.ejs
@@ -55,7 +55,7 @@
                 </div>
             </div>
     </div>
-    <script src="/Matkaklubi/public/scripts/trek.js"></script>
+    <script src="/scripts/trek.js"></script>
 
     <%- include ("../partials/nav-all.ejs") %>
 </body>
