--- a/public/stylesheets/trek.css
+++ b/public/stylesheets/trek.css
@@ -35,3 +35,27 @@
     width: 50%;
     padding: 20px;
 }
+
+.uudis{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 25px;
+    margin-top: 100px;
+    
+}
+
+.uudise-pilt{
+    width: 100%;
+    margin-top: 20px;
+}
+.uudise-autor{
+    font-style: italic;
+    margin-top: 20px;
+}
+
+.uudise-kirjeldus{
+    margin-top: 20px;
+}
+
+.uudise-pealkiri{
+    font-weight: bold;
+}
