--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -12,14 +12,16 @@
     <div class="konteiner">
         <div id="matkad" class="matkad">
         </div>
+    
+        </div>
         <div id="matka-detail" class="matka-detail">
             <h5 id="matka-pealkiri"></h5>
             <h2>Matka pealkiri</h2>
             <input id="detail-pealkiri" type="text"></input>
             <h2>Matka algus</h2>
-            <input id="detail-aeg" type="date"></input>
+            <input id="detail-algus" type="date"></input>
             <h2>Matka lõpp</h2>
-            <input id="detail-aeg" type="date"></input>
+            <input id="detail-lopp" type="date"></input>
             <h2>Matka kirjeldus</h2>
             <textarea id="detail-kirjeldus"></textarea>
             <h2>Matka pilt</h2>
