--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -8,9 +8,12 @@
 </head>
 
 <body>
+    <div class="container-fluid pais-sektsioon">
+
+    
     <%- include ("../partials/nav.ejs") %> 
     
-      <div id="teade"></div>
+    <div id="teade"></div>
       <h3>Contact us</h3>
       <form>
           <label >Name: </label> <input type="text"id="name"> <br>
@@ -21,6 +24,8 @@
       </form>
       <script src="/Matkaklubi/views/script.js"></script> 
       <%- include ("../partials/nav-all.ejs") %>
+    
+</div>
 </body>
 
 </html>
