--- a/views/pages/treks.ejs
+++ b/views/pages/treks.ejs
@@ -40,7 +40,7 @@
 
                    
                             </div>
-                            <a href=<%=`trek/${matkad[i].id}`%> <div class="matka-nupp">Registreeru matkale</a>
+                            <a href=<%=`trek/${matkad[i]._id}`%> <div class="matka-nupp">Registreeru matkale</a>
        
                         </div>
                     </div>
